@@ -22,12 +22,14 @@ import io.grpc.Context;
 import io.grpc.stub.StreamObserver;
 import java.nio.ByteBuffer;
 import java.util.Collections;
+import java.util.List;
 import java.util.concurrent.TimeUnit;
 import org.apache.pinot.common.proto.Mailbox.MailboxContent;
 import org.apache.pinot.common.proto.Mailbox.MailboxStatus;
 import org.apache.pinot.query.mailbox.MailboxService;
 import org.apache.pinot.query.mailbox.ReceivingMailbox;
 import org.apache.pinot.query.runtime.blocks.ErrorMseBlock;
+import org.apache.pinot.spi.exception.QueryErrorCode;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -113,9 +115,9 @@ public class MailboxContentObserver implements StreamObserver<MailboxContent> {
   public void onError(Throwable t) {
     LOGGER.warn("Error on receiver side", t);
     if (_mailbox != null) {
-      _mailbox.setErrorBlock(
-          ErrorMseBlock.fromException(new RuntimeException("Cancelled by sender", t)),
-          Collections.emptyList());
+      String msg = t != null ? t.getMessage() : "Unknown";
+      _mailbox.setErrorBlock(ErrorMseBlock.fromError(
+          QueryErrorCode.QUERY_CANCELLATION, "Cancelled by sender with exception: " + msg), List.of());
     } else {
       LOGGER.error("Got error before mailbox is set up", t);
     }
